java 17: exploit new language features
Also, clean up code based upon IDE suggestions.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>